--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,13 @@
-#map {position: absolute; height: 100%; width: 100%; top: 0; left: 0;}
 .l-map {
   position: relative;
   width: 100%;
   height: 100vh;
+}
+
+.l-sidebar {
+  overflow: auto;
+  width: 100%;
+  max-height: 100vh;
 }
 
 .dashboard-form {
@@ -10,5 +15,7 @@
 }
 
 .dashboard-form textarea {
-  min-height: 500px;
+  min-height: 400px;
 }
+
+#map {position: absolute; height: 100%; width: 100%; top: 0; left: 0;}
